Changed the save location of model data and refactored

--- a/1.train_models/train_lr_plate3_cp_fs_data.ipynb
+++ b/1.train_models/train_lr_plate3_cp_fs_data.ipynb
@@ -3,16 +3,16 @@
   {
    "cell_type": "markdown",
    "metadata": {
-    "jukit_cell_id": "AAuDgo76ka"
+    "jukit_cell_id": "ejlw4X3ZaR"
    },
    "source": [
-    "# Train a Logistic Regression Model"
+    "# Training a Logistic Regression Model"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {
-    "jukit_cell_id": "SyZ3qa8iz3"
+    "jukit_cell_id": "GOPeJtwlep"
    },
    "source": [
     "## Imports"
@@ -43,9 +43,62 @@
     "import matplotlib.pyplot as plt\n",
     "import seaborn as sns\n",
     "\n",
-    "from joblib import dump, load\n",
+    "from joblib import dump, load"
+   ],
+   "outputs": [],
+   "execution_count": null
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {
+    "jukit_cell_id": "F4T2C3cxtm"
+   },
+   "source": [
+    "## Find the git root Directory"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "metadata": {
+    "jukit_cell_id": "Iz4nqgONsd"
+   },
+   "source": [
+    "# Get the current working directory\n",
+    "cwd = Path.cwd()\n",
     "\n",
-    "sys.path.append(\"../utils\")\n",
+    "if (cwd / \".git\").is_dir():\n",
+    "    root_dir = cwd\n",
+    "\n",
+    "else:\n",
+    "    root_dir = None\n",
+    "    for parent in cwd.parents:\n",
+    "        if (parent / \".git\").is_dir():\n",
+    "            root_dir = parent\n",
+    "            break\n",
+    "\n",
+    "# Check if a Git root directory was found\n",
+    "if root_dir is None:\n",
+    "    raise FileNotFoundError(\"No Git root directory found.\")"
+   ],
+   "outputs": [],
+   "execution_count": null
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {
+    "jukit_cell_id": "04o5SnczWZ"
+   },
+   "source": [
+    "## Import Utils"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "metadata": {
+    "jukit_cell_id": "l1Pgm6LLAj"
+   },
+   "source": [
+    "sys.path.append(f\"{root_dir}/utils\")\n",
     "import analysis_utils as au\n",
     "import preprocess_utils as ppu\n",
     "import eval_utils as eu\n",
@@ -92,15 +145,13 @@
    "source": [
     "filename3 = \"Plate_3_sc_norm_fs.parquet\"\n",
     "filename3p = \"Plate_3_prime_sc_norm_fs.parquet\"\n",
+    "plate_path = Path(\n",
+    "    f\"{root_dir}/nf1_painting_repo/3.processing_features/data/feature_selected_data\"\n",
+    ")\n",
     "\n",
-    "path3 = (\n",
-    "    Path(\"../nf1_painting_repo/3.processing_features/data/feature_selected_data\")\n",
-    "    / filename3\n",
-    ")\n",
-    "path3p = (\n",
-    "    Path(\"../nf1_painting_repo/3.processing_features/data/feature_selected_data\")\n",
-    "    / filename3p\n",
-    ")\n",
+    "path3 = plate_path / filename3\n",
+    "\n",
+    "path3p = plate_path / filename3p\n",
     "\n",
     "po3 = ppu.Preprocess_data(path=path3)\n",
     "po3p = ppu.Preprocess_data(path=path3p)\n",
@@ -325,9 +376,11 @@
     "jukit_cell_id": "xGf9mf7lUA"
    },
    "source": [
-    "data_path = Path(\"trained_models_feature_selection/plate3_cp_fs_data\")\n",
+    "data_path = Path(f\"{root_dir}/2.evaluate_models/model_data/lr_plate3_cp_fs_data\")\n",
     "\n",
-    "data_path.mkdir(parents=True, exist_ok=True)\n",
+    "data_path.parents[0].mkdir(\n",
+    "    parents=True, exist_ok=True\n",
+    ")  # Create the parent directories if they don't exist\n",
     "\n",
     "dump(lr, data_path / \"lr_model.joblib\")"
    ],
@@ -341,7 +394,7 @@
      "output_type": "execute_result",
      "execution_count": 2,
      "data": {
-      "text/plain": "['trained_models_feature_selection/plate3_cp_fs_data/lr_model.joblib']"
+      "text/plain": "['/home/camo/projects/NF1_SchwannCell_data_analysis/2.evaluate_models/model_data/lr_plate3_cp_fs_data/lr_model.joblib']"
      },
      "metadata": {}
     }
@@ -376,7 +429,7 @@
      "output_type": "execute_result",
      "execution_count": 3,
      "data": {
-      "text/plain": "['trained_models_feature_selection/plate3_cp_fs_data/label_encoder.joblib']"
+      "text/plain": "['/home/camo/projects/NF1_SchwannCell_data_analysis/2.evaluate_models/model_data/lr_plate3_cp_fs_data/label_encoder.joblib']"
      },
      "metadata": {}
     }
