Removed unused imports

--- a/1.train_models/log_reg_plate_3_3p_cp_renorm_fs_data/train_model.ipynb
+++ b/1.train_models/log_reg_plate_3_3p_cp_renorm_fs_data/train_model.ipynb
@@ -23,10 +23,10 @@
    "execution_count": 1,
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2023-06-15T20:52:33.851088Z",
-     "iopub.status.busy": "2023-06-15T20:52:33.850967Z",
-     "iopub.status.idle": "2023-06-15T20:52:34.428967Z",
-     "shell.execute_reply": "2023-06-15T20:52:34.428454Z"
+     "iopub.execute_input": "2023-06-16T00:08:48.451363Z",
+     "iopub.status.busy": "2023-06-16T00:08:48.451158Z",
+     "iopub.status.idle": "2023-06-16T00:08:48.839740Z",
+     "shell.execute_reply": "2023-06-16T00:08:48.839275Z"
     },
     "jukit_cell_id": "FKd1dIo45E"
    },
@@ -36,22 +36,10 @@
     "import pandas as pd\n",
     "import numpy as np\n",
     "from pathlib import Path\n",
-    "from sklearn.preprocessing import LabelEncoder, OneHotEncoder, MinMaxScaler\n",
+    "from sklearn.preprocessing import LabelEncoder, MinMaxScaler\n",
     "from sklearn.linear_model import LogisticRegression\n",
-    "\n",
-    "from sklearn.metrics import (\n",
-    "    confusion_matrix,\n",
-    "    ConfusionMatrixDisplay,\n",
-    "    precision_score,\n",
-    "    accuracy_score,\n",
-    ")\n",
     "from sklearn.model_selection import train_test_split\n",
-    "from collections import Counter\n",
-    "\n",
-    "import matplotlib.pyplot as plt\n",
-    "import seaborn as sns\n",
-    "\n",
-    "from joblib import dump, load"
+    "from joblib import dump"
    ]
   },
   {
@@ -68,10 +56,10 @@
    "execution_count": 2,
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2023-06-15T20:52:34.431241Z",
-     "iopub.status.busy": "2023-06-15T20:52:34.431038Z",
-     "iopub.status.idle": "2023-06-15T20:52:34.433929Z",
-     "shell.execute_reply": "2023-06-15T20:52:34.433616Z"
+     "iopub.execute_input": "2023-06-16T00:08:48.841758Z",
+     "iopub.status.busy": "2023-06-16T00:08:48.841403Z",
+     "iopub.status.idle": "2023-06-16T00:08:48.844258Z",
+     "shell.execute_reply": "2023-06-16T00:08:48.843897Z"
     },
     "jukit_cell_id": "Iz4nqgONsd"
    },
@@ -109,10 +97,10 @@
    "execution_count": 3,
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2023-06-15T20:52:34.435513Z",
-     "iopub.status.busy": "2023-06-15T20:52:34.435298Z",
-     "iopub.status.idle": "2023-06-15T20:52:34.437549Z",
-     "shell.execute_reply": "2023-06-15T20:52:34.437205Z"
+     "iopub.execute_input": "2023-06-16T00:08:48.845520Z",
+     "iopub.status.busy": "2023-06-16T00:08:48.845280Z",
+     "iopub.status.idle": "2023-06-16T00:08:48.852773Z",
+     "shell.execute_reply": "2023-06-16T00:08:48.852426Z"
     },
     "jukit_cell_id": "l1Pgm6LLAj"
    },
@@ -136,10 +124,10 @@
    "execution_count": 4,
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2023-06-15T20:52:34.439043Z",
-     "iopub.status.busy": "2023-06-15T20:52:34.438780Z",
-     "iopub.status.idle": "2023-06-15T20:52:34.440786Z",
-     "shell.execute_reply": "2023-06-15T20:52:34.440446Z"
+     "iopub.execute_input": "2023-06-16T00:08:48.854182Z",
+     "iopub.status.busy": "2023-06-16T00:08:48.853952Z",
+     "iopub.status.idle": "2023-06-16T00:08:48.855986Z",
+     "shell.execute_reply": "2023-06-16T00:08:48.855636Z"
     },
     "jukit_cell_id": "EBc3nCzByb"
    },
@@ -172,10 +160,10 @@
    "execution_count": 5,
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2023-06-15T20:52:34.442385Z",
-     "iopub.status.busy": "2023-06-15T20:52:34.442129Z",
-     "iopub.status.idle": "2023-06-15T20:52:34.616847Z",
-     "shell.execute_reply": "2023-06-15T20:52:34.616374Z"
+     "iopub.execute_input": "2023-06-16T00:08:48.857249Z",
+     "iopub.status.busy": "2023-06-16T00:08:48.857022Z",
+     "iopub.status.idle": "2023-06-16T00:08:49.372889Z",
+     "shell.execute_reply": "2023-06-16T00:08:49.372262Z"
     },
     "jukit_cell_id": "EYGHUOxuTt"
    },
@@ -217,10 +205,10 @@
    "execution_count": 6,
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2023-06-15T20:52:34.618772Z",
-     "iopub.status.busy": "2023-06-15T20:52:34.618563Z",
-     "iopub.status.idle": "2023-06-15T20:52:35.003719Z",
-     "shell.execute_reply": "2023-06-15T20:52:35.003329Z"
+     "iopub.execute_input": "2023-06-16T00:08:49.375792Z",
+     "iopub.status.busy": "2023-06-16T00:08:49.375267Z",
+     "iopub.status.idle": "2023-06-16T00:08:50.543733Z",
+     "shell.execute_reply": "2023-06-16T00:08:50.543385Z"
     },
     "jukit_cell_id": "V0yTf41uiR"
    },
@@ -269,10 +257,10 @@
    "execution_count": 7,
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2023-06-15T20:52:35.005846Z",
-     "iopub.status.busy": "2023-06-15T20:52:35.005684Z",
-     "iopub.status.idle": "2023-06-15T20:52:35.045485Z",
-     "shell.execute_reply": "2023-06-15T20:52:35.045103Z"
+     "iopub.execute_input": "2023-06-16T00:08:50.546160Z",
+     "iopub.status.busy": "2023-06-16T00:08:50.545986Z",
+     "iopub.status.idle": "2023-06-16T00:08:50.598217Z",
+     "shell.execute_reply": "2023-06-16T00:08:50.597864Z"
     },
     "jukit_cell_id": "bCflTponOs"
    },
@@ -303,10 +291,10 @@
    "execution_count": 8,
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2023-06-15T20:52:35.046880Z",
-     "iopub.status.busy": "2023-06-15T20:52:35.046721Z",
-     "iopub.status.idle": "2023-06-15T20:52:35.362207Z",
-     "shell.execute_reply": "2023-06-15T20:52:35.361793Z"
+     "iopub.execute_input": "2023-06-16T00:08:50.599919Z",
+     "iopub.status.busy": "2023-06-16T00:08:50.599790Z",
+     "iopub.status.idle": "2023-06-16T00:08:50.884559Z",
+     "shell.execute_reply": "2023-06-16T00:08:50.884163Z"
     },
     "jukit_cell_id": "6tv8VxofP6"
    },
@@ -339,10 +327,10 @@
    "execution_count": 9,
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2023-06-15T20:52:35.364123Z",
-     "iopub.status.busy": "2023-06-15T20:52:35.364012Z",
-     "iopub.status.idle": "2023-06-15T20:52:35.366012Z",
-     "shell.execute_reply": "2023-06-15T20:52:35.365752Z"
+     "iopub.execute_input": "2023-06-16T00:08:50.886587Z",
+     "iopub.status.busy": "2023-06-16T00:08:50.886432Z",
+     "iopub.status.idle": "2023-06-16T00:08:50.888731Z",
+     "shell.execute_reply": "2023-06-16T00:08:50.888469Z"
     },
     "jukit_cell_id": "jH432rS91v"
    },
@@ -371,10 +359,10 @@
    "execution_count": 10,
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2023-06-15T20:52:35.368032Z",
-     "iopub.status.busy": "2023-06-15T20:52:35.367874Z",
-     "iopub.status.idle": "2023-06-15T20:52:36.355133Z",
-     "shell.execute_reply": "2023-06-15T20:52:36.354713Z"
+     "iopub.execute_input": "2023-06-16T00:08:50.890453Z",
+     "iopub.status.busy": "2023-06-16T00:08:50.890231Z",
+     "iopub.status.idle": "2023-06-16T00:08:51.802900Z",
+     "shell.execute_reply": "2023-06-16T00:08:51.802501Z"
     },
     "jukit_cell_id": "6wLIrXfTzh"
    },
@@ -406,10 +394,10 @@
    "execution_count": 11,
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2023-06-15T20:52:36.357264Z",
-     "iopub.status.busy": "2023-06-15T20:52:36.357064Z",
-     "iopub.status.idle": "2023-06-15T20:52:36.511742Z",
-     "shell.execute_reply": "2023-06-15T20:52:36.511324Z"
+     "iopub.execute_input": "2023-06-16T00:08:51.804874Z",
+     "iopub.status.busy": "2023-06-16T00:08:51.804717Z",
+     "iopub.status.idle": "2023-06-16T00:08:51.954399Z",
+     "shell.execute_reply": "2023-06-16T00:08:51.953999Z"
     },
     "jukit_cell_id": "VNkswJFWjR"
    },
@@ -438,10 +426,10 @@
    "execution_count": 12,
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2023-06-15T20:52:36.513377Z",
-     "iopub.status.busy": "2023-06-15T20:52:36.513245Z",
-     "iopub.status.idle": "2023-06-15T20:52:36.518796Z",
-     "shell.execute_reply": "2023-06-15T20:52:36.518499Z"
+     "iopub.execute_input": "2023-06-16T00:08:51.956082Z",
+     "iopub.status.busy": "2023-06-16T00:08:51.955964Z",
+     "iopub.status.idle": "2023-06-16T00:08:51.961379Z",
+     "shell.execute_reply": "2023-06-16T00:08:51.961083Z"
     },
     "jukit_cell_id": "wqT9BUqx7w"
    },
@@ -450,17 +438,17 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "/tmp/ipykernel_94859/4215398058.py:2: PerformanceWarning: DataFrame is highly fragmented.  This is usually the result of calling `frame.insert` many times, which has poor performance.  Consider joining all columns at once using pd.concat(axis=1) instead. To get a de-fragmented frame, use `newframe = frame.copy()`\n",
+      "/tmp/ipykernel_4858/4215398058.py:2: PerformanceWarning: DataFrame is highly fragmented.  This is usually the result of calling `frame.insert` many times, which has poor performance.  Consider joining all columns at once using pd.concat(axis=1) instead. To get a de-fragmented frame, use `newframe = frame.copy()`\n",
       "  testdf[\"label\"] = le.fit_transform(testdf[target_column].values)\n",
-      "/tmp/ipykernel_94859/4215398058.py:2: SettingWithCopyWarning: \n",
+      "/tmp/ipykernel_4858/4215398058.py:2: SettingWithCopyWarning: \n",
       "A value is trying to be set on a copy of a slice from a DataFrame.\n",
       "Try using .loc[row_indexer,col_indexer] = value instead\n",
       "\n",
       "See the caveats in the documentation: https://pandas.pydata.org/pandas-docs/stable/user_guide/indexing.html#returning-a-view-versus-a-copy\n",
       "  testdf[\"label\"] = le.fit_transform(testdf[target_column].values)\n",
-      "/tmp/ipykernel_94859/4215398058.py:3: PerformanceWarning: DataFrame is highly fragmented.  This is usually the result of calling `frame.insert` many times, which has poor performance.  Consider joining all columns at once using pd.concat(axis=1) instead. To get a de-fragmented frame, use `newframe = frame.copy()`\n",
+      "/tmp/ipykernel_4858/4215398058.py:3: PerformanceWarning: DataFrame is highly fragmented.  This is usually the result of calling `frame.insert` many times, which has poor performance.  Consider joining all columns at once using pd.concat(axis=1) instead. To get a de-fragmented frame, use `newframe = frame.copy()`\n",
       "  traindf[\"label\"] = le.transform(traindf[target_column].values)\n",
-      "/tmp/ipykernel_94859/4215398058.py:3: SettingWithCopyWarning: \n",
+      "/tmp/ipykernel_4858/4215398058.py:3: SettingWithCopyWarning: \n",
       "A value is trying to be set on a copy of a slice from a DataFrame.\n",
       "Try using .loc[row_indexer,col_indexer] = value instead\n",
       "\n",
@@ -489,10 +477,10 @@
    "execution_count": 13,
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2023-06-15T20:52:36.542072Z",
-     "iopub.status.busy": "2023-06-15T20:52:36.541931Z",
-     "iopub.status.idle": "2023-06-15T20:52:36.636527Z",
-     "shell.execute_reply": "2023-06-15T20:52:36.636097Z"
+     "iopub.execute_input": "2023-06-16T00:08:51.996139Z",
+     "iopub.status.busy": "2023-06-16T00:08:51.995998Z",
+     "iopub.status.idle": "2023-06-16T00:08:52.040994Z",
+     "shell.execute_reply": "2023-06-16T00:08:52.040724Z"
     },
     "jukit_cell_id": "UFK0jsur96"
    },
@@ -516,10 +504,10 @@
    "execution_count": 14,
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2023-06-15T20:52:36.638548Z",
-     "iopub.status.busy": "2023-06-15T20:52:36.638435Z",
-     "iopub.status.idle": "2023-06-15T20:53:06.913296Z",
-     "shell.execute_reply": "2023-06-15T20:53:06.912875Z"
+     "iopub.execute_input": "2023-06-16T00:08:52.042820Z",
+     "iopub.status.busy": "2023-06-16T00:08:52.042684Z",
+     "iopub.status.idle": "2023-06-16T00:09:23.125169Z",
+     "shell.execute_reply": "2023-06-16T00:09:23.124638Z"
     },
     "jukit_cell_id": "4WFLztISAE"
    },
@@ -557,10 +545,10 @@
    "execution_count": 15,
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2023-06-15T20:53:06.914829Z",
-     "iopub.status.busy": "2023-06-15T20:53:06.914664Z",
-     "iopub.status.idle": "2023-06-15T20:53:06.918986Z",
-     "shell.execute_reply": "2023-06-15T20:53:06.918638Z"
+     "iopub.execute_input": "2023-06-16T00:09:23.127296Z",
+     "iopub.status.busy": "2023-06-16T00:09:23.127084Z",
+     "iopub.status.idle": "2023-06-16T00:09:23.132567Z",
+     "shell.execute_reply": "2023-06-16T00:09:23.132100Z"
     },
     "jukit_cell_id": "xGf9mf7lUA"
    },
@@ -600,10 +588,10 @@
    "execution_count": 16,
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2023-06-15T20:53:06.920576Z",
-     "iopub.status.busy": "2023-06-15T20:53:06.920384Z",
-     "iopub.status.idle": "2023-06-15T20:53:06.998415Z",
-     "shell.execute_reply": "2023-06-15T20:53:06.998167Z"
+     "iopub.execute_input": "2023-06-16T00:09:23.134568Z",
+     "iopub.status.busy": "2023-06-16T00:09:23.134199Z",
+     "iopub.status.idle": "2023-06-16T00:09:23.215877Z",
+     "shell.execute_reply": "2023-06-16T00:09:23.215364Z"
     },
     "jukit_cell_id": "sgPsexjO8l"
    },
